# fotona-gui

./: .gitignore  build.sh  catkin_ws.code-workspace  dis.txt  launch.xml  notes  notes.md  replay.sh  test.ipynb
build_isolated/: catkin_make_isolated.cache
build_isolated/fotona_gui/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  fotona_gui_node
build_isolated/tester/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
demos/: fotona_rosbag.sh  fotona_tester.sh  radix_rosbag.sh  radix_tester.sh
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/fotona_gui/: .catkin  setup.sh
devel_isolated/tester/: .rosinstall  setup.sh
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
launch/: gui.xml
src/fotona_gui/: CMakeLists.txt  log.txt
src/fotona_gui/launch/: gui.launch
src/fotona_gui/src/: coro.hpp  depth_map_transformer.cpp  depth_map_transformer.hpp  main.cpp  main_window.cpp  main_window.h  main_window.hpp  main_window_constructor.cpp  mesh_generator.cpp  mesh_generator.hpp  optional_ext.hpp  parameter_server.hpp  ros_event_loop.cpp  ros_event_loop.hpp  rviz_active_management.cpp  rviz_active_management.hpp  transparent_button.hpp
src/fotona_gui/src/outdated/: cache.hpp  main_window.old.cpp  main_window.old.hpp  mesh_generator.cpp  optional_ext.hpp  rviz_active_management.cpp  rviz_bundle.hpp
(+103 files in other folders)
